Adjusted person details layout

--- a/src/components/mgt-person-card/mgt-person-card.scss
+++ b/src/components/mgt-person-card/mgt-person-card.scss
@@ -17,7 +17,7 @@ $color: var(--color, #{$ms-color-neutralDark});
   box-shadow: 0px 0px 4.55172px rgba(0, 0, 0, 0.16);
   font-family: var(--default-font-family);
 
-  .default-view {
+  .person-details-container {
     display: flex;
     padding: 18px 14px;
 
