--- a/src/components/mgt-person-card/mgt-person-card.scss
+++ b/src/components/mgt-person-card/mgt-person-card.scss
@@ -4,6 +4,8 @@
  * See License in the project root for license information.
  * -------------------------------------------------------------------------------------------
  */
+
+@import '../../styles/shared-styles.scss';
 @import '../../../node_modules/office-ui-fabric-core/dist/sass/References';
 
 $font-size: var(--font-size, #{$ms-font-size-m});
@@ -15,7 +17,7 @@ $color: var(--color, #{$ms-color-neutralDark});
   width: 340px;
   background: #ffffff;
   box-shadow: 0px 0px 4.55172px rgba(0, 0, 0, 0.16);
-  font-family: var(--default-font-family, 'Segoe UI');
+  font-family: var(--default-font-family);
 
   .default-view {
     display: flex;
