moved flyout to position:fixed and updated dependant components

--- a/src/components/mgt-person-card/mgt-person-card.scss
+++ b/src/components/mgt-person-card/mgt-person-card.scss
@@ -14,9 +14,8 @@ $color: var(--color, #{$ms-color-neutralDark});
 
 :host .root {
   position: relative;
-  width: 340px;
+  width: var(--mgt-flyout-set-width, 340px);
   background: #ffffff;
-  box-shadow: 0px 0px 4.55172px rgba(0, 0, 0, 0.16);
   font-family: var(--default-font-family);
 
   .person-details-container {
