--- a/src/components/mgt-login/mgt-login.scss
+++ b/src/components/mgt-login/mgt-login.scss
@@ -64,6 +64,10 @@ mgt-login .login-button {
     opacity: 0.4;
     pointer-events: none;
   }
+
+  &.no-click {
+    pointer-events: none;
+  }
 }
 
 :host .login-icon,
@@ -75,10 +79,8 @@ mgt-login .login-icon {
 
 :host .popup,
 mgt-login .popup {
-  position: absolute;
   font-family: var(--default-font-family);
   background: var(--popup-content-background-color);
-  box-shadow: 0 12px 40px 2px rgba(0, 0, 0, 0.08);
   min-width: 240px;
   z-index: 1;
   color: var(--popup-color);
