--- a/src/components/mgt-tasks/mgt-tasks.scss
+++ b/src/components/mgt-tasks/mgt-tasks.scss
@@ -390,7 +390,7 @@ mgt-tasks,
           -webkit-background-clip: padding-box;
           -moz-background-clip: padding-box;
           background-clip: padding-box;
-          width: 350px;
+          width: var(--mgt-flyout-set-width, 350px);
           color: var(--task-detail-color, black);
           mgt-people-picker {
             --separator-margin: 0px 10px 0px 10px;
