--- a/src/components/mgt-person-card/mgt-person-card.scss
+++ b/src/components/mgt-person-card/mgt-person-card.scss
@@ -8,13 +8,15 @@
 @import '../../styles/shared-styles.scss';
 @import '../../../node_modules/office-ui-fabric-core/dist/sass/References';
 
-$person-card-display-name-font-size: var(--person-card-display-name-font-size, 27.3103px);
+$person-card-title-font-size: var(--person-card-title-font-size, 27.3103px);
 $person-card-secondary-title-font-size: var(--person-card-secondary-title-font-size, 18.2069px);
-$person-card-additional-details-title-font-size: var(--person-card-additional-details-title-font-size, 14px);
-$person-card-additional-details-item-font-size: var(--person-card-additional-details-item-font-size, 15px);
-$person-card-display-name-color: var(--person-card-display-name-color, #333333);
+$person-card-subtitle-font-size: var(--person-card-subtitle-font-size, 15.1724px);
+$person-card-details-title-font-size: var(--person-card-details-title-font-size, 14px);
+$person-card-details-item-font-size: var(--person-card-additional-details-item-font-size, 15px);
+$person-card-title-color: var(--person-card-title-color, #333333);
 $person-card-secondary-title-color: var(--person-card-secondary-title-color, #767676);
-$person-card-additional-details-title-color: var(--person-card-additional-details-title-color, #000000);
+$person-card-subtitle-font-color: var(--person-card-subtitle-font-color, #767676);
+$person-card-details-title-color: var(--person-card-details-title-color, #000000);
 $person-card-additional-details-item-color: var(--person-card-additional-details-item-color, #201f1e);
 $person-card-background-color: var(--person-card-background-color, #ffffff);
 
@@ -22,7 +24,6 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
   position: relative;
   width: 340px;
   background: $person-card-background-color;
-  box-shadow: 0px 0px 4.55172px rgba(0, 0, 0, 0.16);
   font-family: var(--default-font-family);
 
   .person-details-container {
@@ -38,8 +39,8 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
       line-height: 1.15;
 
       .display-name {
-        font-size: $person-card-display-name-font-size;
-        color: $person-card-display-name-color;
+        font-size: $person-card-title-font-size;
+        color: $person-card-title-color;
       }
 
       .job-title {
@@ -48,8 +49,8 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
       }
 
       .department {
-        font-size: 15.1724px;
-        color: #767676;
+        font-size: $person-card-subtitle-font-size;
+        color: $person-card-subtitle-font-color;
       }
 
       .base-icons {
@@ -93,15 +94,15 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
       .contact-text {
         margin: 0 0 24px 0;
         font-weight: 600;
-        font-size: $person-card-additional-details-title-font-size;
-        color: $person-card-additional-details-title-color;
+        font-size: $person-card-details-title-font-size;
+        color: $person-card-details-title-color;
       }
 
       .icons {
         line-height: normal;
         font-style: normal;
         font-weight: normal;
-        font-size: $person-card-additional-details-item-font-size;
+        font-size: $person-card-details-item-font-size;
         color: $person-card-additional-details-item-color;
         text-align: left;
 
