--- a/src/components/mgt-person-card/mgt-person-card.scss
+++ b/src/components/mgt-person-card/mgt-person-card.scss
@@ -37,7 +37,26 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
     .details {
       margin-left: 14px;
       line-height: 1.15;
-
+      display: grid;
+      position: relative;
+      overflow: hidden;
+      text-overflow: ellipse;
+      white-space: nowrap;
+      background-color: transparent;
+      width: 100%;
+      &::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        right: 0;
+        background: linear-gradient(left, transparent, transparent 80%, $person-card-background-color);
+        background: -webkit-linear-gradient(left, transparent, transparent 80%, $person-card-background-color);
+        background: -moz-linear-gradient(left, transparent, transparent 80%, $person-card-background-color);
+        background: -o-linear-gradient(left, transparent, transparent 80%, $person-card-background-color);
+        background: -ms-linear-gradient(left, transparent, transparent 80%, $person-card-background-color);
+      }
       .display-name {
         font-size: $person-card-display-name-font-size;
         color: $person-card-display-name-color;
