Lots of improvements

--- a/src/components/mgt-person-card/mgt-person-card.scss
+++ b/src/components/mgt-person-card/mgt-person-card.scss
@@ -25,6 +25,7 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
   background: $person-card-background-color;
   width: var(--mgt-flyout-set-width, 340px);
   font-family: var(--default-font-family);
+  overflow-x: hidden;
 
   .person-details-container {
     display: flex;
@@ -91,6 +92,15 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
   }
 
   .expanded-details-container {
+    /* BEGIN */
+    display: flex;
+    flex-direction: column;
+    max-height: 600px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    position: relative;
+    /* END */
+
     .expanded-details-button {
       display: flex;
       justify-content: center;
@@ -105,8 +115,11 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
       background-color: rgba(0, 0, 0, 0.068);
     }
     .expanded-details-info {
-      margin: 0 0 0 20px;
-      padding-bottom: 18px;
+      /* BEGIN */
+      /*margin: 0 0 0 20px;
+      padding-bottom: 18px;*/
+      padding: 18px;
+      /* END  */
       display: flex;
       flex-direction: column;
 
@@ -155,6 +168,7 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
       width: 96%;
       height: 1px;
       background: #eaeaea;
+      align-self: center;
     }
   }
 }
