--- a/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -17,7 +17,22 @@ $initials-background-color: var(--initials-background-color, #{$ms-color-magenta
 $accent-color: var(--accent-color, #0078d4);
 $separator-margin: var(--separator-margin, 0px 0px 0px 0px);
 
-$people-list-background-color: var(--people-list-background-color, white);
+$input-border: var(--input-border, 2px solid #b3b0ad);
+$input-border-bottom: var(--input-border-bottom, $input-border);
+$input-border-right: var(--input-border-right, $input-border);
+$input-border-left: var(--input-border-left, $input-border);
+$input-border-top: var(--input-border-top, $input-border);
+
+$input-hover-color: var(--input-hover-color, #323130);
+$input-focus-color: var(--input-focus-color, #0078d4);
+$input-background-color: var(--input-background-color, transparent);
+
+$dropdown-background-color: var(--dropdown-background-color, white);
+$dropdown-item-hover-background: var(--dropdown-item-hover-background, #f1f1f1dd);
+
+$placeholder-default-color: var(--placeholder-default-color, #605e5c);
+$placeholder-focus-color: var(--placeholder-focus-color, #323130);
+$font-color: var(--font-color, #323130);
 
 :host {
   border-radius: 2px;
@@ -34,15 +49,26 @@ mgt-people-picker .root {
 mgt-people-picker .people-picker {
   position: relative;
   margin: 7px 0 0 0;
-  background-color: white;
+  background-color: $input-background-color;
   padding-bottom: 8px;
+  border: $input-border;
+  border-bottom: $input-border-bottom;
+  border-left: $input-border-left;
+  border-top: $input-border-top;
+  border-right: $input-border-right;
+  &:hover {
+    border-color: $input-hover-color;
+  }
+  &.focused {
+    border-color: $input-focus-color;
+  }
 }
 
 :host .flyout-root,
 mgt-people-picker .flyout-root {
   padding: 0;
   border-radius: 2px;
-  background-color: $people-list-background-color;
+  background-color: $dropdown-background-color;
   width: 100%;
   overflow-y: auto;
   text-align: left;
@@ -71,6 +97,14 @@ mgt-people-picker .people-selected-input {
   font-weight: normal;
   font-size: 14px;
   line-height: 19px;
+  background-color: $input-background-color;
+  color: $font-color;
+  &::placeholder {
+    color: $placeholder-default-color;
+  }
+  &:focus::placeholder {
+    color: $placeholder-focus-color;
+  }
 }
 
 :host .people-selected-list,
@@ -92,6 +126,7 @@ mgt-people-picker .CloseIcon {
   padding-left: 4px;
   margin-top: 0px;
   cursor: pointer;
+  color: $font-color;
 }
 :host .SearchIcon,
 mgt-people-picker .SearchIcon {
@@ -122,13 +157,13 @@ mgt-people-picker .list-person {
   font-size: 14px;
 
   &:hover {
-    background-color: #f1f1f1dd;
+    background-color: $dropdown-item-hover-background;
   }
 }
 
 :host .list-person.focused,
 mgt-people-picker .list-person.focused {
-  background-color: #f1f1f1;
+  background-color: $dropdown-item-hover-background;
 }
 
 :host .people-person-text,
@@ -155,7 +190,7 @@ mgt-people-picker .input-search.input-search--start {
 mgt-people-picker .people-picker-input {
   display: flex;
   order: 2;
-  background-color: white;
+  background-color: $input-background-color;
   margin: $avatar-margin;
   font-size: 14px;
   line-height: 19px;
@@ -202,19 +237,21 @@ mgt-person {
 .selected-person {
   --avatar-size-s: 24px;
   margin-left: 0px;
+  --color: $font-color;
+  color: $font-color;
 }
 
 :host .search-error-text,
 :host .loading-text,
 mgt-people-picker .search-error-text,
 mgt-people-picker .loading-text {
-  font-family: Segoe UI;
+  font-family: var(--default-font-family, 'Segoe UI');
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
   line-height: 19px;
   text-align: center;
-  color: #232222;
+  color: $font-color;
   margin-left: 50px;
   margin-right: 50px;
 }
@@ -253,4 +290,5 @@ mgt-people-picker .people-person-text-area {
   flex: 1 1 0;
   max-height: 40px;
   overflow: hidden;
+  color: $font-color;
 }
