--- a/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -49,7 +49,7 @@ mgt-people-picker .people-picker {
   position: relative;
   margin: 7px 0 0 0;
   background-color: $input-background-color;
-  padding-bottom: 4px;
+  padding-bottom: 3px;
   border: $input-border;
   border-bottom: $input-border-bottom;
   border-left: $input-border-left;
@@ -105,7 +105,7 @@ mgt-people-picker .people-selected-list {
   vertical-align: middle;
   margin: 0 2px 0 0;
   list-style-type: none;
-  padding-left: 10px;
+  padding-left: 8px;
   font-style: normal;
   font-weight: normal;
 }
@@ -167,11 +167,11 @@ mgt-people-picker .people-person-text {
 
 :host .input-search,
 mgt-people-picker .input-search {
-  margin: 7px 2px 0px 3px;
+  margin: 5px 2px 2.83px 3px;
 }
 :host .input-search.input-search--start,
 mgt-people-picker .input-search.input-search--start {
-  margin: 7px 0px 0px 0px;
+  margin: 5px 0px 0px 0px;
   line-height: normal;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
@@ -230,6 +230,7 @@ mgt-person {
   margin-left: 0px;
   --color: $font-color;
   color: $font-color;
+  margin-bottom: 1px;
 }
 
 :host .search-error-text,
