Added stubs for all person card sections

--- a/src/beta/components/mgt-person-card-beta/sections/mgt-person-card-files/mgt-person-card-files.scss
+++ b/src/beta/components/mgt-person-card-beta/sections/mgt-person-card-files/mgt-person-card-files.scss
@@ -5,4 +5,5 @@
  * -------------------------------------------------------------------------------------------
  */
 
-import { IGraph } from '../../../../../IGraph';
+@import '../../../../../styles/shared-styles.scss';
+@import '../../../../../../node_modules/office-ui-fabric-core/dist/sass/References';
