--- a/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -36,6 +36,7 @@ $font-color: var(--font-color, #323130);
 :host {
   border-radius: 2px;
   font-family: var(--default-font-family, 'Segoe UI');
+  height: 38px;
 }
 :host .root,
 mgt-people-picker .root {
@@ -47,7 +48,7 @@ mgt-people-picker .people-picker {
   position: relative;
   margin: 7px 0 0 0;
   background-color: $input-background-color;
-  padding-bottom: 3px;
+  padding-bottom: 6px;
   border: $input-border;
   border-bottom: $input-border-bottom;
   border-left: $input-border-left;
@@ -127,7 +128,7 @@ mgt-people-picker .SearchIcon {
 :host .people-person,
 mgt-people-picker .people-person {
   display: flex;
-  margin: 4px 5px 0px 0;
+  margin: 5px 5px 0px 0;
   align-items: center;
   background-color: rgba(196, 196, 196, 0.24);
   border-radius: 15px;
