--- a/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
+++ b/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
@@ -23,7 +23,7 @@ $input-border-top: var(--input-border-top, $input-border);
 
 $input-hover-color: var(--input-hover-color, #323130);
 $input-focus-color: var(--input-focus-color, #0078d4);
-$input-background-color: var(--input-background-color, transparent);
+$input-background-color: var(--input-background-color, white);
 
 $dropdown-item-hover-background: var(--dropdown-item-hover-background, #f1f1f1dd);
 $dropdown-background-color: var(--dropdown-background-color, white);
